# FastQL

./: .gitignore  CHRIS_README.md  Cargo.toml  README.md  doc_schema.graphql  model.py  model2.py  model3.py  py3.py  pyproject.toml  pyscript.py  requirements.txt  schema.py  test copy.py  test.py
.github/workflows/: CI.yml
etc/: .example.env
example/: .env  Dockerfile  finetune.sh  finetune_and_infer.py  finetune_and_inference.py  infer_only.py  inference_only.py  lib.py  start.sh  start_finetune.sh  start_infer.sh  start_inference.sh
fastql/: test-schema.py  wrapper.py
fastqlapi/: __init__.py  server.py  test_schema.py
lib/: types.py  wrapper.py
python/fastqlapi/: LICENSE  __init__.py  newscript.py  server.py
src/: back2.off  lib copy.off  lib.rs  lib2.rs  lib_back.rs  libold.off  main.rs  mod.rs  schema.rs  types.rs  utils.rs  working.off
src/config/: constants.rs
