[package]
name = "GQLwrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "GQLwrapper"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
actix-web = "4"
actix-web-lab = "0.18"
actix-cors = "0.6"
lazy_static = "1.4.0"
zmq = "0.10.0"
juniper = "0.15"

env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
