[package]
name = "fastqlapi"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastqlapi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
actix-web = "4"
actix-cors = "0.6"
zmq = "0.10.0"
env_logger = "0.9"
serde_json = "1"
async-graphql = { version = "5.0.2", features = ["dynamic-schema", "apollo_tracing"]}
async-graphql-actix-web = "5.0.2"
serde = "1.0.148"